fixing font size/spacing

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -44,7 +44,7 @@ body {
 
 .logo img {
   /* margin-top: 16em; */
-  max-width: 20em;
+  max-width: 28em;
   height: auto;
 }
 
@@ -65,7 +65,7 @@ nav {
 .menu {
   flex-direction: row;
   text-decoration: none;
-  padding-top: 1em;
+  padding-top: 1.5em;
   padding-right: 3em;
 }
 
@@ -91,7 +91,7 @@ a:hover {
 .social {
   font-family: "Lexend Exa", sans-serif;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 1em;
   color: #fff;
   text-align: left !important;
   text-decoration-line: none;
@@ -110,15 +110,16 @@ a {
 h1 {
   font-family: "Lexend Exa", sans-serif;
   font-weight: 500;
-  font-size: clamp(50px, 1.1vw, 100px);
+  font-size: 2em;
   color: #fff;
   text-align: left;
+  margin-top: 0;
 }
 
 p {
   font-family: "Lexend Exa", sans-serif;
   font-weight: 300;
-  font-size: clamp(16px, 1.4vw, 40px);
+  font-size: 1em;
   color: #fff;
   margin-top: 8px;
   margin-right: 3vw;
@@ -237,6 +238,7 @@ p {
   width: 58%;
   padding-top: 11.4vw;
   overflow-y: scroll;
+  
 }
 #about-text::-webkit-scrollbar {
   display: none;
@@ -253,7 +255,6 @@ p {
 
 .services-list {
   text-align: left;
-  font-size: 0;
   padding-bottom: 20%;
   margin-top: 3vh;
 }
@@ -276,14 +277,15 @@ p {
   font-family: "Lexend Exa", sans-serif;
   font-weight: 300;
   color: #fff;
-  font-size: clamp(10px, 1.07vw, 40px);
+  font-size: .8em;
   white-space: nowrap;
+  line-height: 1.5em;
 }
 
 .client-column {
   display: inline-block;
   vertical-align: top;
-  margin-right: 2.1vw;
+  margin-right: 3vw;
   margin-top: 2.5vw;
   width: auto;
   list-style: none;
@@ -298,7 +300,7 @@ p {
   font-family: "Lexend Exa", sans-serif;
   font-weight: 300;
   color: #fff;
-  font-size: clamp(10px, 1.07vw, 40px);
+  font-size: .8em;
   white-space: nowrap;
 }
 
